# rocket-diesel-rest-api-example

./: Cargo.toml  LICENSE  README.md
migrations/2018-03-17-180012_heroes/: down.sql  up.sql
src/: db.rs  hero.rs  main.rs  schema.rs
